--- a/src/components/CustomTabs/style.css
+++ b/src/components/CustomTabs/style.css
@@ -1,6 +1,6 @@
 
 .TabsSection {
-    background: #274091;
+    /* background: #274091; */
     top: -30px;
     position: relative;
  transition: all 0.2s ease-in-out;
@@ -52,5 +52,19 @@ transition: all 0.2s ease-in-out;
     .bellICon{
         position: relative;
         top: 1px;
+    }
+    @media(max-width:991px){
+        .tabLink {
+        
+            font-size: 0.9rem;
+        }
+        .singleTabCont.activeCont, .singleTabCont:hover {
+            max-width: 100%;
+            flex: 1 0 100%;
+        
+        }
+        .singleTabCont.activeCont::before {
+            content: '';
+            display: none;}
     }
  
