update Profile ,add attachment form arabic,english,responsive,bind with api

--- a/src/components/ProfileInfo/style.css
+++ b/src/components/ProfileInfo/style.css
@@ -92,7 +92,9 @@
   background: linear-gradient(to right, #c6087459, #27409187);
   backdrop-filter: blur(1px);
 }
-.profileButton.ant-btn-primary:hover {   
+.profileButton.ant-btn-primary:hover ,.profileButton.ant-btn-primary:active
+,.profileButton.ant-btn-primary:focus
+{   
   border: 1px solid white;
   box-shadow: 0px 0px 1px 1px white;
    background: linear-gradient(to right, #3a398d, #b60d77);}
@@ -162,3 +164,84 @@
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out
 }
+.attachModal .ant-modal-title {
+   text-align: start;
+  color: rgb(39 64 145);
+  font-family: 'Cairo-Regular';}
+  .attachModal .ant-modal-close:focus,.attachModal  .ant-modal-close:hover {
+ 
+    outline: none;
+    border: none;
+}
+.ant-modal-close:lang(ar) {
+   right: unset;
+  left: 0;}
+.attachModal .ant-modal-content {padding: 0 12px;}
+.attachModal .ant-modal-header  {  border-bottom: 2px solid #c60874;}
+.attachModal .ant-modal-footer {  border-top: 2px solid #c60874;
+  text-align: end;
+  direction: ltr;}
+  .uploadBTN{font-family: 'Cairo-Regular';
+    width: fit-content;
+    min-width: 200px;
+    font-weight: 500;}
+    .uploadBTN i{margin-inline-end: 8px;
+      position: relative;
+      font-size: 1.1rem;
+      color: #c50874; }
+      .attachModal  .ant-form-vertical .ant-form-item-label > label, 
+      .attachModal   .ant-col-24.ant-form-item-label > label,
+      .attachModal  .ant-col-xl-24.ant-form-item-label > label ,
+      .attachModal .ant-input
+      {
+      
+        font-family: 'Cairo-Regular';
+    }
+
+      .attachModal   .ant-input:hover, .attachModal  .uploadBTN:hover {
+        border-color: #274091;
+        border-right-width: 1px;
+    }
+  .attachModal .ant-input:focus,.attachModal  .ant-input-focused, .attachModal  .uploadBTN:focus {
+    border-color: #274091;
+    box-shadow: 0 0 0 1px rgb(39 64 145);
+    border-right-width: 1px;
+    outline: 0;
+}
+.ant-form-item-control-input-content {
+ 
+  text-align: start;
+}
+.attachModal .ant-btn-primary {
+  color: #fff;
+  border-color: #274091;
+  background: #274091;}
+  .attachModal .saveBtn:hover ,.attachModal .saveBtn:active 
+  ,.attachModal .saveBtn:focus {
+   
+    border-color: #c50874;
+    background: #c50874;}
+    .ant-btn.ant-btn-default.cancelBTN {
+      border: 1px solid #c60874;
+      color: #c60874;
+  }
+  .attachModal .ant-radio-button-wrapper-checked {
+    /* border-right-color: #c60874; */
+    border-right:   solid #c60874 !important;
+    border-left:   solid #c60874 !important;
+    border: 1px solid #c60874 !important;
+    border-radius: 1px !important;
+    color:#c60874 !important;
+}
+.attachModal .ant-form label {
+  font-size: 14px;
+  margin-inline-end: 10px;
+ 
+}
+.attachModal  .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled)::before {
+  background-color: #c60874;
+}
+.attachModal  .ant-radio-button-wrapper {
+  width: 73px;
+  text-align: center;}
+ 
