--- a/src/main-component/ShippingRequestPage/shippingrequestpage.scss
+++ b/src/main-component/ShippingRequestPage/shippingrequestpage.scss
@@ -12,21 +12,25 @@
             display: flex;
             align-items: center;
             flex-direction: column;
+            
             h3 {
-                color:white
+                color:white;
+                font-family: 'Cairo-Regular';
             }
-            .horizonal-align {
+            .horizonal-align.stage {
                 display: flex;
                 justify-content: space-evenly;
                 align-items: center;
+                padding:30px;
+                p {
+                    margin:0;
+                }
                 .shipping-icon {
                     font-size: 30px;
                     font-weight: 700;
                     position: relative;
-                    padding-bottom:8px;
-                    margin-bottom: 30px;
-                   
                     border-radius: 50%;
+                    padding-bottom: 10px;
                 }
             }
            
@@ -130,4 +134,8 @@
         font-size: x-large;
         font-weight: bold;
     }
+}
+.toRight {
+    display: flex;
+    justify-content: flex-start;
 }
