addresses,change Password

--- a/src/components/features2/style.css
+++ b/src/components/features2/style.css
@@ -34,7 +34,7 @@ overflow: hidden;
   padding: 0;
   width: 90px;
   height: 90px;
-  background: #34ccff;
+  background: #274091;
   border-radius: 50%;
   line-height: 75px;
   text-align: center;
