--- a/src/components/Addresses/formStyle.scss
+++ b/src/components/Addresses/formStyle.scss
@@ -1,4 +1,4 @@
-.recipientsSection{
+.AddresesSection{
     .registerFormCol .ant-form-vertical .ant-form-item-label,
 .registerFormCol .ant-col-24.ant-form-item-label,
 .registerFormCol  .ant-col-xl-24.ant-form-item-label {
