--- a/src/components/offers/offers.scss
+++ b/src/components/offers/offers.scss
@@ -38,3 +38,18 @@
         }
     }
 }
+@media only screen  and (max-width:500px){
+    .offersContainer {
+        .buttonContainer {
+            justify-content: center;
+            display: flex;
+        }
+    }
+}
+@media only screen and (min-width:501px) and (max-width:1024px) {
+    .offerContainer {
+        .offerDetail {
+            white-space: nowrap;
+        }
+    }
+}
